# ifco_dbt_training_pyspark_to_sql

./: README.md  dbt_project.yml  pyproject.toml
